   * checkMD5sums2 - added the omit_files parameter (allowing the removal of the files ‘etc/Rconsole’ and ‘etc/Rprofile.site’ from the checksums of an R installation)



installr 0.9.2 (2013-05-14)
---------------------------

NEW FUNCTIONS ADDED:
   * cranometer - Estimates the speed of each CRAN mirror by measuring the time it takes to download the NEWS file. (including an example of creating a world-map based on this data)
   * require2 - just like "require", only makes sure to download and install the package in case it is not present on the system (useful for examples...)

OTHER NOTES:
   * More documentation.  Updated README.md
   * Fixed width of various elements in the documentation
   * installr 0.9.2 is to be shipped to CRAN.


installr 0.9.1 (2013-04-04)
---------------------------

NEW FUNCTIONS ADDED:
   * checkMD5sums2 - Just like checkMD5sums from the tools package, but with the added md5file parameter. (useful for manually checking if the downloaded R EXE installer is fine, combined with this MD5 file: http://cran.rstudio.com/bin/windows/base/md5sum.txt)
   * browse.latest.R.NEWS() - sends the user to the latest R NEWS file.

UPDATED FUNCTIONS:
   * install.URL - updated the error massage to explain better what (probably) went wrong.  And encourage the users to e-mail me with bug reports.
   * add.installr.GUI - made sure the function wouldn't add items if "Update" is already present. e.g: made a fail-safe mechanism in case the function installr:::add.installr.GUI() is run more than once (my thanks goes to Dieter Menne for the suggestion)
   * install.R - Updated the warning massage on install.R in case checkMD5sum fails.
   * updateR -
      ** added the to_checkMD5sums parameter to updateR (to be passed on to install.R() )
      ** it now uses the browse.latest.R.NEWS() function.

BUG FIXES:
   * install.pandoc - fixed it to work with the new URL scheme they've chosen for their site (they moved to MSI instead of .EXE about two weeks ago...)