@@ -8,38 +8,38 @@ export(create.global.library)
 export(file.name.from.url)
 export(get.installed.R.folders)
 export(install.7zip)
-export(install.Cygwin)
-export(install.FFmpeg)
-export(install.GitHub)
-export(install.GraphicsMagick)
-export(install.ImageMagick)
-export(install.LaTeX2RTF)
-export(install.LyX)
-export(install.MikTeX)
-export(install.R)
-export(install.RStudio)
-export(install.Rtools)
-export(install.SWFTools)
-export(install.URL)
 export(install.cygwin)
+export(install.Cygwin)
 export(install.ffmpeg)
+export(install.FFmpeg)
 export(install.git)
 export(install.github)
+export(install.GitHub)
 export(install.graphicsmagick)
+export(install.GraphicsMagick)
 export(install.imagemagick)
+export(install.ImageMagick)
 export(install.latex2rtf)
+export(install.LaTeX2RTF)
 export(install.lyx)
+export(install.LyX)
 export(install.miktex)
+export(install.MikTeX)
 export(install.notepadpp)
 export(install.npptor)
 export(install.packages.zip)
 export(install.pandoc)
+export(install.R)
 export(install.rstudio)
+export(install.RStudio)
 export(install.rtools)
+export(install.Rtools)
 export(install.swftools)
+export(install.SWFTools)
+export(install.URL)
 export(installr)
-export(is.RStudio)
 export(is.Rgui)
+export(is.RStudio)
 export(is.windows)
 export(os.hibernate)
 export(os.lock)
@@ -47,6 +47,7 @@ export(os.manage)
 export(os.restart)
 export(os.shutdown)
 export(os.sleep)
+export(R_version_in_a_folder)
 export(require2)
 export(source.https)
 export(system.PATH)
